# project1

10531367_10800106/: README.txt
10531367_10800106/project1/: CMakeLists.txt  package.xml
10531367_10800106/project1/launch/: initialization.launch
10531367_10800106/project1/src/: estimate.cpp  odometry.cpp
project1/: CMakeLists.txt  package.xml
project1/cfg/: integration.cfg
project1/launch/: initialization.launch
project1/src/: estimate.cpp  odometry.cpp
project1/srv/: RiPosiziona.srv
